sumo/tests/netconvert/import/XML/errors/broken_edge/edge#nolanes__false4/errors.netconvert
Error: Attribute 'numLanes' in definition of edge '4' is not an int.
Quitting (on error).
